--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -182,20 +182,8 @@
     <!-- Footer -->
 		<footer id="footer">
       <section class="information">
-        <!--
-        <div class="footer-left">
-          <div style="width : 230px; height : 80px; position: relative;">
-            <img src="./images/main_logo.png" style="position: absolute; top:0%; left: 0%;
-            width: inherit;
-            max-width: 100%;
-            height: auto" alt="경남인테리어로고">
-          </div>
-        </div>
-        -->
         <div class="footer-center">
-          <!--<img src="./images/main_logo.png" alt="경남인테리어로고">-->
-          <ul class="" style="color: rgb(0, 0, 0); float: left;">
-            <!-- 카피라이트 정보-->
+         <ul class="" style="float: left;">
             <li>상담전화</li>
             <li>02-2637-1173</li>
             <li>평일 10:30 ~ 18:30 </li>
@@ -204,8 +192,7 @@
         </div>
         <div class="footer-right">
           <div class="jeonju">
-            <ul class="" style="color: rgb(0, 0, 0); float: left;">
-              <!-- 카피라이트 정보-->
+            <ul class="" style="float: left;">
               <li>Address : 서울 영등포구 양산로 177 경남아파트상가 108호 경남인테리어</li>
               <li>e-mail : kninfo0501@naver.com</li>
               <li>Tel : 02-2637-1173</li>
