--- a/src/main/resources/templates/fragment/footer.html
+++ b/src/main/resources/templates/fragment/footer.html
@@ -5,9 +5,7 @@
     <footer id="footer">
         <section class="information">
             <div class="footer-center">
-                <!--<img src="./images/main_logo.png" alt="경남인테리어로고">-->
-                <ul class="" style="color: rgb(0, 0, 0); float: left;">
-                    <!-- 카피라이트 정보-->
+               <ul class="" style="float: left;">
                     <li>상담전화</li>
                     <li>02-2637-1173</li>
                     <li>평일 10:30 ~ 18:30 </li>
@@ -16,8 +14,7 @@
             </div>
             <div class="footer-right">
                 <div class="jeonju">
-                    <ul class="" style="color: rgb(0, 0, 0); float: left;">
-                        <!-- 카피라이트 정보-->
+                    <ul class="" style="float: left;">
                         <li>Address : 서울 영등포구 양산로 177 경남아파트상가 108호 경남인테리어</li>
                         <li>e-mail : kninfo0501@naver.com</li>
                         <li>Tel : 02-2637-1173</li>
