refactor : javascript files naming convention

--- a/src/main/resources/templates/contact.html
+++ b/src/main/resources/templates/contact.html
@@ -280,7 +280,7 @@
 			}
 		})
 	</script>
-	<script src="/js/daumPost.js"></script>
-	<script src="/js/scrollFollow.js"></script>
+	<script src="/js/daumpost.js"></script>
+	<script src="/js/scrollfollow.js"></script>
 </div>
 </html>
