--- a/src/main/resources/templates/contact_confirm.html
+++ b/src/main/resources/templates/contact_confirm.html
@@ -195,7 +195,7 @@
         // 문의글 제거는 일단 추가 x 함.
     </script>
 
-    <script src="/js/daumPost.js"></script>
-    <script src="/js/scrollFollow.js"></script>
+    <script src="/js/daumpost.js"></script>
+    <script src="/js/scrollfollow.js"></script>
 </div>
 </html>
