--- a/src/main/resources/templates/contact_list.html
+++ b/src/main/resources/templates/contact_list.html
@@ -167,6 +167,6 @@
 		// 	})
 		// }
 	</script>
-	<script src="/js/scrollFollow.js"></script>
+	<script src="/js/scrollfollow.js"></script>
 </div>
 </html>
