--- a/src/main/resources/templates/fragment/config.html
+++ b/src/main/resources/templates/fragment/config.html
@@ -27,7 +27,7 @@
     <link rel="stylesheet" href="http://cdn.jsdelivr.net/xeicon/2/xeicon.min.css">
     <!--Auto-Gradation Change Background-->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.0.2/jquery.min.js"></script>
-    <script th:src="@{/js/autoGradation.js}"></script>
+    <script th:src="@{/js/autogradation.js}"></script>
 
     <script src="//t1.daumcdn.net/mapjsapi/bundle/postcode/prod/postcode.v2.js"></script>
 
