--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -278,12 +278,12 @@
       });
     </script>
 
-  <script src="/js/googleMap.js"></script>
+  <script src="/js/googlemap.js"></script>
   <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
   <script src="/js/swiper.js"></script>
-  <script src="/js/scrollFollow.js"></script>
+  <script src="/js/scrollfollow.js"></script>
   <script src="/js/hideSidebar.js"></script>
-  <script src="/js/banner-href.js"></script>
+  <script src="/js/bannerhref.js"></script>
 </body>
 </html>
 
