--- a/src/main/resources/templates/work.html
+++ b/src/main/resources/templates/work.html
@@ -37,7 +37,7 @@
         <footer id="common-footer">
         </footer>
     </section>
-    <script src="/js/scrollFollow.js"></script>
+    <script src="/js/scrollfollow.js"></script>
     <script>
         // $(document).on("change", "#select-order-wrapper", function(e){
         //     console.log(e.target.value.split('평')[0]);
