--- a/src/main/resources/templates/work_detail.html
+++ b/src/main/resources/templates/work_detail.html
@@ -39,5 +39,5 @@
             </footer>
         </section>
     </div>
-    <script src="/js/scrollFollow.js"></script>
+    <script src="/js/scrollfollow.js"></script>
 </html>
