refactor : main 컨트롤러 분리

--- a/src/main/resources/templates/contact_list.html
+++ b/src/main/resources/templates/contact_list.html
@@ -97,9 +97,7 @@
 		</div>
 	</div>
 
-	<script>
-
-	</script>
+	<script src="/js/validateContact/contactlistcheck.js"></script>
 	<script src="/js/scrollfollow.js"></script>
 </div>
 </html>
