fix : js 파일명 수정

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -17,7 +17,7 @@
     <link rel="stylesheet" href="http://cdn.jsdelivr.net/xeicon/2/xeicon.min.css">
     <!--Auto-Gradation Change Background-->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.0.2/jquery.min.js"></script>
-    <script src="/js/autoGradation.js"></script>
+    <script src="/js/autogradation.js"></script>
     <!--sideBar-->
     <link rel="stylesheet" href="/css/sideBar.css"/>
     <!--메인페이지 css-->
